--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cedric-demongivert/gl-tool-utils",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "The gl-tool toolbelt.",
   "main": "index.js",
   "types": "./types/index.d.ts",
@@ -31,7 +31,5 @@
     "typedoc": "^0.22.10",
     "typescript": "^4.5.4"
   },
-  "dependencies": {
-  
-  }
+  "dependencies": {}
 }
