--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preversion": "npm install",
     "version": "npm run build && npm test && git add --all",
     "postversion": "git push && git push --tags",
-    "push": "yarn run build && npm publish ./distribution --access public",
+    "push": "npm publish ./distribution --access public",
     "patch": "yarn version --patch && npm run push",
     "minor": "yarn version --minor && npm run push",
     "major": "yarn version --major && npm run push"
