--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,8 @@
     "moduleResolution": "node",
     "downlevelIteration": true,
     "declaration": true,
-    "declarationDir": "./dist/types",
-    "outDir": "./dist/src"
+    "declarationDir": "./distribution/types",
+    "outDir": "./distribution/sources"
   },
   "include": [
       "sources/**/*"
