--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "scripts": {
     "test": "jest --coverage",
     "build": "typedoc && npx mix",
-    "preversion": "npm install",
-    "version": "npm run build && npm test && git add --all",
+    "preversion": "yarn install",
+    "version": "yarn build && yarn test && git add --all",
     "postversion": "git push && git push --tags",
-    "push": "npm publish ./distribution --access public",
-    "patch": "yarn version --patch && npm run push",
-    "minor": "yarn version --minor && npm run push",
-    "major": "yarn version --major && npm run push"
+    "push": "yarn publish ./distribution --access public",
+    "patch": "yarn version --patch && yarn run push",
+    "minor": "yarn version --minor && yarn run push",
+    "major": "yarn version --major && yarn run push"
   },
   "repository": "https://gitlab.cedric-demongivert.com/gl-tool/gl-tool-buffer.git",
   "author": "Cédric DEMONGIVERT <cedric.demongivert@gmail.com>",
