--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,12 @@
     "declarationDir": "./distribution/types",
     "outDir": "./distribution/sources"
   },
+  "typedocOptions": {
+    "entryPoints": ["./sources"],
+    "out": "./distribution/documentation",
+    "readme": "none",
+    "excludePrivate": true
+  },
   "include": [
       "sources/**/*"
   ],
