--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,28 @@
-node_modules
-distribution
-coverage
-npm-debug.log
-yarn-error.log
-package-lock.json
-yarnk.lock
+# Ignore everything.
+*
+
+# Except documentation.
+!documentation
+!documentation/**
+
+# Except sources.
+!sources
+!sources/**
+
+# Except tests.
+!tests
+!tests/**
+
+# Except configuration files.
+!.babelrc
+!.gitignore
+!.npmingore
+!jest.config.js
+!package.json
+!tsconfig.json
+!webpack.mix.js
+!.eslintrc.js
+
+# Except content.
+!LICENSE.md
+!README.md
